fix(card): fix image/border-radius clipping in card

--- a/src/components/card/styles/vars/CdrCard.vars.scss
+++ b/src/components/card/styles/vars/CdrCard.vars.scss
@@ -7,6 +7,7 @@
   width: 100%;
   transition: box-shadow $cdr-duration-2-x $cdr-timing-function-ease;
   cursor: pointer;
+  overflow: hidden;
 
   &:active, &:hover {
     box-shadow: $cdr-prominence-floating;
